--- a/.github/workflows/test-package-cd.yml
+++ b/.github/workflows/test-package-cd.yml
@@ -15,6 +15,8 @@ jobs:
         node-version: [12.x]
     steps:
     - uses: actions/checkout@v2
+      with:
+          persist-credentials: false
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -29,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v1
         with:
           node-version: 14
