--- a/.github/workflows/test-package-cd.yml
+++ b/.github/workflows/test-package-cd.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch
 defaults:
   run:
-    working-directory: test-package
+    working-directory: ./
 permissions:
   packages: write
 jobs:
