--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "test-package",
   "version": "1.0.0",
   "description": "Test package for Github Packages + Actions",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": "./dist/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/**/*.spec.ts",
+    "test": "jest",
     "build": "tsc",
     "release": "semantic-release -e semantic-release-monorepo"
   },
@@ -17,13 +19,12 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3",
+    "jest": "^27.4.5",
     "semantic-release": "^18.0.1",
     "semantic-release-monorepo": "^7.0.5",
+    "ts-jest": "^27.1.2",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
   },
@@ -33,5 +34,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/yromero-tcs"
-  }
+  },
+  "dependencies": {}
 }
