--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "es5",
     "declaration": true,
     "types": [
-      "mocha", "node", "chai", "jest"
+      "node", "jest"
     ]
   },
   "compileOnSave": true,
