--- a/.github/workflows/test-package-cd.yml
+++ b/.github/workflows/test-package-cd.yml
@@ -44,7 +44,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
       - run: npm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   notify_slack_success:
     runs-on: ubuntu-latest
     needs: [test, publish]
