--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-package",
   "packageManager": "yarn@3.1.1",
   "devDependencies": {
+    "@auto-it/git-tag": "^10.32.5",
     "@auto-it/npm": "^10.32.5",
     "@auto-it/released": "^10.32.5",
     "@auto-it/slack": "^10.32.5",
